Bug 967414 - Enable DataStore API in B2G for certified apps only by default. r=bz, a=1.3+