b2g/app/b2g.js
@@ -805,11 +805,7 @@ pref("network.sntp.timeout", 30); // In seconds.
 pref("dom.promise.enabled", false);
 
 // Enable dataStore
-#ifdef RELEASE_BUILD
-pref("dom.datastore.enabled", false);
-#else
 pref("dom.datastore.enabled", true);
-#endif
 
 // DOM Inter-App Communication API.
 pref("dom.inter-app-communication-api.enabled", true);
